Cleaning prior to adding interface classes for Sd and Ethernet.

--- a/SD-image/www/reprap.htm
+++ b/SD-image/www/reprap.htm
@@ -312,7 +312,7 @@ function viewModel()
 	self.machineName = ko.observable();
 	self.gotPassword = ko.observable();
 	self.deleteButton = ko.observable();
-	self.extrudeButton = ko.observable('Feed');
+	self.extrudeButton = ko.observable('Feed:');
 	self.fanButton = ko.observable('Fan on');
 	self.pauseButton = ko.observable('Pause print');
 	self.fileAction = ko.observable('print it');
