--- a/SD-image-Mendel-3/www/reprap.htm
+++ b/SD-image-Mendel-3/www/reprap.htm
@@ -3,6 +3,7 @@
     <head>
         <title>Ormerod Control v0.65rrp</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		  <meta charset="UTF-8">
 
         <!-- Bootstrap -->
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
