Web interface version number updated.

--- a/SD-image-Huxley-Duo/www/reprap.htm
+++ b/SD-image-Huxley-Duo/www/reprap.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML> 
 <html>
     <head>
-        <title>Ormerod Control v0.65rrp</title>
+        <title>Ormerod Control V1.0 RRP</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		  <meta charset="UTF-8">
 
